# yas

./: README.md
.github/workflows/: rust.yml
scripts/: generate_genshin_catalog.py  run-elevated-e2e.ps1  run-genshin-artifact-e2e.ps1
yas-application/: Cargo.toml
yas-genshin/: Cargo.toml
yas-genshin/src/: lib.rs
yas-genshin/src/application/: artifact_scanner.rs
yas-genshin/src/artifact/: artifact.rs  artifact_catalog.json  catalog.rs  mod.rs
yas-genshin/src/character/: character_names.rs
yas-genshin/src/export/artifact/: csv.rs  exporter.rs  good.rs  mingyu_lab.rs  mod.rs  mona_uranai.rs
yas-genshin/src/scanner/: artifact_lock_state.rs  mod.rs
yas-genshin/src/scanner/artifact_locker/: artifact_locker.rs  config.rs  executor.rs  lock_plan.rs  mod.rs
yas-genshin/src/scanner/artifact_scanner/: artifact_scanner.rs  artifact_scanner_config.rs  artifact_scanner_window_info.rs  artifact_scanner_worker.rs  scan_result.rs
yas-genshin/src/scanner_controller/repository_layout/: config.rs  controller.rs  mod.rs  scroll_result.rs
yas-genshin/window_info/: windows1280x960.json  windows1440x900.json  windows1600x900.json  windows2100x900.json  windows3440x1440.json
yas/src/game_info/: game_info.rs  resolution_family.rs
yas/src/game_info/os/: winodws.rs
yas/src/system_control/windows/: windows_control.rs
yas/src/utils/: windows.rs
yas/src/window_info/: window_info_repository.rs
